<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/hari_ke"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDaysTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/tanngal"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_kasus_baru_per_hari"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvNewCasesDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_kasus_kumulatif"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvNewCasesCumulative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_pasien_dalam_perawatan"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientCare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/presentase_pasien_dalam_perawatan"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPercentagePatientCare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_pasien_sembuh"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientCured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/presentase_pasien_sembuh"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPercentagePatientCured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_pasien_meninggal"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientDied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/presentase_pasien_meninggal"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPercentagePatientDied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_kasus_dirawat_per_hari"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientCareDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_kasus_sembuh_per_hari"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientCuredDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/jumlah_kasus_meninggal_per_hari"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPatientDiedDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
</LinearLayout>